ZCS-7359 Fixing version check error (#2)